--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
 </div>
 
-<button class="menu-toggle" onclick="goHome(); event.stopPropagation();">☰</button>
+<button class="menu-toggle" onclick="openNav()">☰</button>
 
 <div id="side-menu" class="side-menu">
     <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
