--- a/index.html
+++ b/index.html
@@ -516,9 +516,9 @@
         // Tópico 5: MODO INTERATIVO DE BINGO
         { id: 5, question: "Click on the '+' signs to review the number groups.", image: "topico5.jpg", options: {}, correctAnswer: 'INTERACTIVE_BINGO', chapter: 1, title: "5. Interactive Bingo Review" },
         
-        // TÓPICO 6: PRONÚNCIA TEEN vs TY (TEXTO SIMPLIFICADO)
+        // TÓPICO 6: PRONÚNCIA TEEN vs TY (TEXTO EM INGLÊS)
         { id: 6, 
-            question: "Listen and notice the difference.", 
+            question: "Listen and notice the difference between -teen and -ty.", 
             options: { 
                 "13: (Thirteen) – 30 (Thirty)": "teenety.mp3"
             }, 
