--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
     /* Estilos Específicos para o Tópico 7 (FILL_IN_BLANKS) */
     .fill-in-blanks-container {
         display: flex;
-        flex-direction: column; /* NOVO: Empilha os itens verticalmente */
-        align-items: center; /* Centraliza o bloco de inputs */
-        gap: 20px; /* Mais espaço entre os inputs */
+        flex-direction: column; 
+        align-items: center; 
+        gap: 10px; /* ESPAÇAMENTO VERTICAL REDUZIDO */
         padding: 20px 0;
     }
 
@@ -451,9 +451,9 @@
         flex-direction: column; 
         align-items: flex-start;
         gap: 5px; 
-        width: 80%; /* Ocupa a maior parte da largura centralizada */
-        max-width: 350px; /* Limite de largura para não ficar muito comprido em telas grandes */
-        padding: 10px;
+        width: 80%; 
+        max-width: 350px; 
+        padding: 8px; /* PADDING INTERNO REDUZIDO */
         border: 1px solid #eee;
         border-radius: 6px;
         background-color: #f9f9f9;
@@ -471,7 +471,7 @@
 
     .number-input-group input {
         width: 100%; 
-        padding: 12px 10px; 
+        padding: 10px 10px; /* PADDING VERTICAL REDUZIDO */
         border: 1px solid #ccc;
         border-radius: 4px;
         font-size: 1em;
@@ -486,7 +486,7 @@
     }
     
     .number-result {
-        margin-top: 10px;
+        margin-top: 5px; /* Margem ajustada */
         font-weight: bold;
         text-align: left; 
         width: 100%; 
