--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
         display: flex;
         flex-direction: column; 
         align-items: center; 
-        gap: 10px; /* ESPAÇAMENTO VERTICAL REDUZIDO */
+        gap: 10px; 
         padding: 20px 0;
     }
 
@@ -452,8 +452,8 @@
         align-items: flex-start;
         gap: 5px; 
         width: 80%; 
-        max-width: 350px; 
-        padding: 8px; /* PADDING INTERNO REDUZIDO */
+        max-width: 250px; /* Mais estreito */
+        padding: 8px; 
         border: 1px solid #eee;
         border-radius: 6px;
         background-color: #f9f9f9;
@@ -461,7 +461,7 @@
     }
 
     .number-input-group span {
-        font-size: 1.8em; 
+        font-size: 1.5em; /* Número (10:) um pouco menor */
         font-weight: 700;
         color: #333; 
         width: 100%; 
@@ -471,7 +471,7 @@
 
     .number-input-group input {
         width: 100%; 
-        padding: 10px 10px; /* PADDING VERTICAL REDUZIDO */
+        padding: 14px 10px; /* Input mais alto */
         border: 1px solid #ccc;
         border-radius: 4px;
         font-size: 1em;
@@ -486,7 +486,7 @@
     }
     
     .number-result {
-        margin-top: 5px; /* Margem ajustada */
+        margin-top: 5px; 
         font-weight: bold;
         text-align: left; 
         width: 100%; 
