--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         border-radius: 8px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         width: 100%; 
-        object-fit: cover; /* PADRÃO: Corta para preencher (Tópicos 1, 2, etc.) */
+        object-fit: cover; /* PADRÃO: Corta para preencher */
         background-color: #fcfcfc; 
     }
     
@@ -567,13 +567,13 @@
         display: block;
     }
 
-    /* MODIFICAÇÃO Tópico 8: Ajustes de foco para melhor centralização */
-    .gallery-image-wrapper:nth-child(1) img { 
+    /* LINHAS REMOVIDAS: O foco (object-position) não está mais aqui */
+    /* .gallery-image-wrapper:nth-child(1) img { 
         object-position: center 25%; 
     }
     .gallery-image-wrapper:nth-child(3) img { 
         object-position: center 5%; 
-    }
+    } */
     
 
     .image-number-label {
