--- a/index.html
+++ b/index.html
@@ -133,7 +133,28 @@
         </div>
     </div>
 
-</div>
+        <!-- ADD ALL 24 CARDS HERE -->
+        <!-- Example duplicated structure for demonstration -->
+        <!-- CARD 1 already has link; we add placeholders for cards 2-24 -->
 
-</body>
+        <!-- CARD 2 -->
+        <div class="card">
+            <img src="img/card2.jpg" />
+            <div class="card-content">
+                <div class="card-title">Daily Routines</div>
+                <div class="card-info">2 Lessons • 30m</div>
+            </div>
+        </div>
+
+        <!-- CARD 3 -->
+        <div class="card">
+            <img src="img/card3.jpg" />
+            <div class="card-content">
+                <div class="card-title">Meeting New People</div>
+                <div class="card-info">2 Lessons • 30m</div>
+            </div>
+        </div>
+
+        <!-- CARD 4 -->
+        <div class="card">
 </html>
