--- a/index.html
+++ b/index.html
@@ -1,160 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chapter 1 - Introducing Yourself</title>
+<meta charset="UTF-8">
+<title>English App</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        background: #f5f5f5;
+    }
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f7fa;
-        }
+    header {
+        background: #1e40af;
+        color: white;
+        padding: 20px;
+        text-align: center;
+        font-size: 24px;
+        font-weight: bold;
+    }
 
-        header {
-            background-color: #0d6efd;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            font-size: 28px;
-            font-weight: bold;
-        }
+    /* GRID DOS CARDS */
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+        gap: 15px;
+        padding: 20px;
+    }
 
-        .content {
-            width: 90%;
-            margin: auto;
-            margin-top: 30px;
-        }
+    .card {
+        background: white;
+        padding: 25px;
+        border-radius: 12px;
+        text-align: center;
+        font-size: 16px;
+        font-weight: bold;
+        box-shadow: 0px 3px 6px rgba(0,0,0,0.1);
+        cursor: pointer;
+        transition: 0.2s;
+    }
 
-        h2 {
-            text-align: center;
-            margin-top: 10px;
-            color: #0d6efd;
-            font-size: 26px;
-        }
+    .card:hover {
+        transform: scale(1.05);
+    }
 
-        h3 {
-            text-align: center;
-            margin-bottom: 20px;
-            color: #333;
-            font-size: 20px;
-        }
+    /* TELA DA LIÇÃO */
+    #lessonScreen {
+        display: none;
+        padding: 20px;
+    }
 
-        .lesson-box {
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
-            margin-bottom: 40px;
-        }
+    .backBtn {
+        background: #1e3a8a;
+        color: white;
+        padding: 10px 18px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        margin-bottom: 15px;
+    }
 
-        .image-box {
-            width: 100%;
-            text-align: center;
-            margin-bottom: 20px;
-        }
+    .question-block {
+        background: white;
+        padding: 20px;
+        border-radius: 12px;
+        box-shadow: 0px 3px 6px rgba(0,0,0,0.15);
+    }
 
-        .image-box img {
-            width: 300px;
-            max-width: 90%;
-            border-radius: 12px;
-            border: 4px solid #0d6efd;
-        }
+    button.option {
+        width: 100%;
+        padding: 12px;
+        margin: 8px 0;
+        border: 1px solid #aaa;
+        border-radius: 8px;
+        background: white;
+        cursor: pointer;
+        transition: 0.2s;
+    }
 
-        .question {
-            text-align: center;
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
-
-        .options {
-            width: 100%;
-            max-width: 400px;
-            margin: auto;
-        }
-
-        .option {
-            background: white;
-            padding: 12px 18px;
-            border: 2px solid #d1d1d1;
-            border-radius: 8px;
-            margin-bottom: 12px;
-            cursor: pointer;
-            transition: 0.2s;
-        }
-
-        .option:hover {
-            background-color: #eef4ff;
-            border-color: #0d6efd;
-        }
-
-        .bottom-nav {
-            margin-top: 40px;
-            text-align: center;
-        }
-
-        .next-btn {
-            background-color: #0d6efd;
-            padding: 12px 22px;
-            color: white;
-            font-size: 18px;
-            border-radius: 8px;
-            text-decoration: none;
-        }
-    </style>
+    button.option:hover {
+        background: #e5e7eb;
+    }
+</style>
 </head>
 
 <body>
 
-<header>Introducing Yourself</header>
+<header>English Course</header>
 
-<div class="content">
+<!-- TELA INICIAL -->
+<div id="homeScreen">
+    <div class="grid">
+        <!-- Gera os 24 cards -->
+        <script>
+            for (let i = 1; i <= 24; i++) {
+                document.write(`
+                    <div class="card" onclick="openLesson(${i})">
+                        Lesson ${i}
+                    </div>
+                `);
+            }
+        </script>
+    </div>
+</div>
 
-    <div class="lesson-box">
-        <h2>Look and Answer</h2>
-        <h3>Lesson 1</h3>
+<!-- TELA DA LIÇÃO -->
+<div id="lessonScreen">
+    <button class="backBtn" onclick="goHome()">← Back</button>
+    <h2 id="lessonTitle"></h2>
 
-        <div class="image-box">
-            <img src="img/cap1_img1.jpg" alt="Image for lesson" />
-        </div>
+    <div class="question-block">
+        <p id="lessonContent"></p>
 
-        <div class="question">What does this show?</div>
-
-        <div class="options">
-            <div class="option">A. A name tag</div>
-            <div class="option">B. A job interview</div>
-            <div class="option">C. A passport</div>
-        </div>
-
-        <div class="bottom-nav">
-            <a href="#" class="next-btn">Next</a>
-        </div>
+        <button class="option" onclick="selectOption('A')">A</button>
+        <button class="option" onclick="selectOption('B')">B</button>
+        <button class="option" onclick="selectOption('C')">C</button>
     </div>
 
-        <!-- ADD ALL 24 CARDS HERE -->
-        <!-- Example duplicated structure for demonstration -->
-        <!-- CARD 1 already has link; we add placeholders for cards 2-24 -->
+    <br>
+    <button class="backBtn" onclick="nextLesson()">Next</button>
+</div>
 
-        <!-- CARD 2 -->
-        <div class="card">
-            <img src="img/card2.jpg" />
-            <div class="card-content">
-                <div class="card-title">Daily Routines</div>
-                <div class="card-info">2 Lessons • 30m</div>
-            </div>
-        </div>
+<script>
+    // Base de dados simples das lições
+    const lessons = {
+        1: {
+            title: "Introducing Yourself",
+            text: "Look and answer: What does this show?\nA. A name tag\nB. A job interview\nC. A passport"
+        },
+        2: {
+            title: "Greetings",
+            text: "How do you greet someone politely?"
+        }
+        // Aqui você vai adicionando até a 24
+    };
 
-        <!-- CARD 3 -->
-        <div class="card">
-            <img src="img/card3.jpg" />
-            <div class="card-content">
-                <div class="card-title">Meeting New People</div>
-                <div class="card-info">2 Lessons • 30m</div>
-            </div>
-        </div>
+    let currentLesson = 1;
 
-        <!-- CARD 4 -->
-        <div class="card">
+    function openLesson(num) {
+        currentLesson = num;
+
+        document.getElementById("homeScreen").style.display = "none";
+        document.getElementById("lessonScreen").style.display = "block";
+
+        loadLesson(num);
+    }
+
+    function loadLesson(num) {
+        let data = lessons[num] || { title: "Lesson " + num, text: "Content not added yet." };
+
+        document.getElementById("lessonTitle").innerText = data.title;
+        document.getElementById("lessonContent").innerText = data.text;
+    }
+
+    function goHome() {
+        document.getElementById("lessonScreen").style.display = "none";
+        document.getElementById("homeScreen").style.display = "block";
+    }
+
+    function nextLesson() {
+        currentLesson++;
+        if (currentLesson > 24) currentLesson = 1;
+        loadLesson(currentLesson);
+    }
+
+    function selectOption(opt) {
+        alert("You selected option " + opt);
+    }
+</script>
+
+</body>
 </html>
